welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: ')' expected but integer literal found.
	if (a>=10 && a<=20 && b<10 && b>20|| a<10 && a>20 b>=10 && b<=20) {
                                                             ^loneTeen:8: error: illegal start of simple expression
}
^